--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@capacitor/status-bar": "6.0.2",
     "@ionic/angular": "^8.0.0",
     "angularx-qrcode": "^18.0.2",
+    "cors": "^2.8.5",
     "g": "^2.0.1",
     "ionicons": "^7.0.0",
     "json": "^11.0.0",
+    "json-server": "^0.17.4",
+    "node": "^20.18.1",
     "rxjs": "~7.8.0",
     "server": "^1.0.41",
     "tslib": "^2.3.0",
